--- a/estilos/style.css
+++ b/estilos/style.css
@@ -47,6 +47,7 @@ img {
 
 .fa-close {
     padding: 10px;
+    cursor: pointer;
 }
 
 .waring {
@@ -59,7 +60,7 @@ img {
     margin-bottom: 10px;
 }
 
-.currently-hours {
+.currently-day {
     margin: 10px;
     text-align: center;
     font-size: 14px;
@@ -69,6 +70,7 @@ img {
 section.geral-chat {
     height: 75vh;
     overflow-y: scroll;
+    width: 100%;
 }
 
 section.geral-chat::-webkit-scrollbar {
@@ -79,32 +81,46 @@ section.geral-chat::-webkit-scrollbar-thumb {
     background-color: transparent;
 }
 
+.messages {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-left: 20px;
+    width: 100%;
+}
+
+.messages-Out {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    width: 100%;
+    transform: translateX(-20px);
+}
+
 .home-msg {
+    width: 100%;
     width: 40%;    
+    margin-top: 10px;
+    margin-bottom: 10px;
     background-color: #790079;
-    margin: 20px;
     padding: 10px;
     border-radius: 0px 10px 10px 10px;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.514);
 }
 
-.to-right {
-    display: flex;
-    justify-content: end;
-    width: 100%;
-}
-
 .out-msg {
+    width: 100%;
     width: 40%;
+    margin-top: 10px;
+    margin-bottom: 10px;
     background-color: #279964;
-    margin: 20px;
     padding: 10px;
     border-radius: 10px 0px 10px 10px;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.514);
 }
 
 .time-msg {
-    margin-top: 10px;
+    margin-top: 5px;
     font-size: 12px;
     text-align: end;
 }
