--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,6 +76,14 @@ section.geral-chat {
     overflow-x: hidden;
 }
 
+@media screen and (max-width:768px){
+    section.geral-chat {
+        height: 65vh;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+}
+
 section.geral-chat::-webkit-scrollbar {
     width: 0;
 }
